--- a/references.bib
+++ b/references.bib
@@ -111,7 +111,7 @@
 	place = {Cambridge},
 	title = {Introduction to Vassiliev Knot Invariants},
 	publisher = {Cambridge University Press},
-	author = {Chmutov, S. and Duzhin, S. and Mostovoy, J.},
+	author = {Sergei Chmutov and Sergei Duzhin and Jacob Mostovoy},
 	year = {2012},
 }
 
@@ -229,8 +229,10 @@
 @online{wheeling-a-diagrammatic-analogue-of-the-duflo-isomorphism,
 	title = {Wheeling: A diagrammatic analogue of the Duflo isomorphism},
 	author = {Dylan P. Thurston},
-	journal = {arXiv: Quantum Algebra},
+	Eprint = {math/0006083},
+	Eprinttype = {arXiv},
 	year = {2000},
+	note = {PhD thesis},
 }
 @article{on-the-rozansky-witten-weight-systems,
 	title = {On the Rozansky-Witten weight systems},
@@ -248,7 +250,7 @@
 	number = {1},
 	pages = {153-178},
 	year = {1997},
-	author = {S.V. Chmutov and A.N. Varchenko},
+	author = {Sergei Chmutov and Alexander Varchenko},
 }
 
 @article{vassiliev-knot-invariants-and-lie-s-algebras,
@@ -268,6 +270,24 @@
 	number = {6},
 	pages = {1292-1339},
 	year = {2011},
+	author = {Pierre Vogel},
+}
+
+@unpublished{algebraic-structures-on-modules-of-diagrams-preprint,
+	title = {Algebraic structures on modules of diagrams},
+	note = {An early preprint version of \cite{
+	        algebraic-structures-on-modules-of-diagrams}.},
+	url = {https://webusers.imj-prg.fr/~pierre.vogel/},
+	year = {1997},
+	author = {Pierre Vogel},
+}
+
+
+@unpublished{vassiliev-theory-and-the-universal-lie-algebra,
+	title = {Vassiliev theory and the universal Lie algebra},
+	note = {Unpublished preprint},
+	url = {https://webusers.imj-prg.fr/~pierre.vogel/},
+	year = {1999},
 	author = {Pierre Vogel},
 }
 
