--- a/macros.tex
+++ b/macros.tex
@@ -5,8 +5,9 @@
 \newcommand{\T}{\mathbb{T}}
 \renewcommand{\S}{\mathbb{S}}
 
-% Common operations
+% Common operations and functions
 \newcommand{\gr}{\operatorname{gr}}
+\newcommand{\id}{\operatorname{id}}
 
 % Common sets
 \newcommand{\singularknots}{\mathcal{K}^{\bullet}}
