--- a/references.bib
+++ b/references.bib
@@ -244,7 +244,8 @@
 }
 
 @article{remarks-on-the-vassiliev-knot-invariants-coming-from-sl2,
-	title = {Remarks on the vassiliev knot invariants coming from sl2},
+	title = {Remarks on the vassiliev knot invariants coming from \(
+	         \mathfrak{sl}_{2}\)},
 	journal = {Topology},
 	volume = {36},
 	number = {1},
@@ -254,7 +255,7 @@
 }
 
 @article{vassiliev-knot-invariants-and-lie-s-algebras,
-	title = {Vassiliev knot invariants and Lie S-algebras},
+	title = {Vassiliev knot invariants and Lie \(S\)-algebras},
 	author = {Arkady Vaintrob},
 	journal = {Mathematical Research Letters},
 	number = {1},
@@ -330,7 +331,8 @@
 }
 
 @article{riordan-trees-and-the-homotopy-sl2-weight-system,
-	title = {Riordan trees and the homotopy \(sl_{2}\) weight system},
+	title = {Riordan trees and the homotopy \(\mathfrak{sl}_{2}\) weight
+	         system},
 	journal = {Journal of Pure and Applied Algebra},
 	volume = {221},
 	number = {3},
