--- a/welded_knots_Ig_and_arrow_diagrams.tex
+++ b/welded_knots_Ig_and_arrow_diagrams.tex
@@ -1,6 +1,5 @@
 \chapter{Welded knots, isometry Lie algebras and arrow diagrams}
-
-test text
+\label{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams}
 
 \section{Welded knots}
 
